vlib/v/parser/tests/orm_no_error_handler.vv
import db.sqlite

struct User {
	id int
}

fn main() {
	db := sqlite.connect(':memory:')!

	_ := sql db {
		select from User
	}
}
